<resources>
    <string name="app_name">PrettyLive</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3"> Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">Username</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email_hint">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account? <font color="#2196F3">Login Now</font></string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your app</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="term_condition">Login means you agree to our <u><font color="#2196F3">Terms &amp; Privacy Policy.</font></u></string>
    <string name="continue_with">Login To Continue</string>
    <string name="txt_phone_hint">phone</string>
    <string name="txt_otp_verification">Verification</string>
    <string name="txt_otp_sent">Verification code sent on your email</string>
    <string name="txt_otp">Otp</string>
    <string name="txt_code">verification code</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_resend">Resend code</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_setup">Setup your basic information</string>
    <string name="txt_id">ID:</string>
    <string name="txt_nickname">Nickname:</string>
    <string name="txt_nickname_hint">3 - 20 characters</string>
    <string name="txt_region">Region:</string>
    <string name="txt_gender">Gender:</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_enter">Enter</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="live">Live</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>
    <string name="txt_enter_phone">Enter your phone number to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="default_web_client_id">150849685541-vjkp5db0rfi61deiq5ggd11qmc69svff.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_anonymous_sign_in">Anonymous Sign In</string>
    <string name="label_account_linking">Account Linking</string>
    <string name="btn_link_account">Link Account</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>
    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>
    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="liveaudioroom_you">You</string>
    <string name="liveaudioroom_speaker">Speaker</string>
    <string name="liveaudioroom_host">Host</string>
    <string name="permission_explain_camera">Camera access is required to start a live.</string>
    <string name="permission_explain_mic">Microphone access is required to start a live.</string>
    <string name="permission_explain_camera_mic">Camera and microphone access are required to start a live.</string>
    <string name="settings_camera">Please go to system settings to allow camera access. </string>
    <string name="settings_mic">Please go to system settings to allow microphone access. </string>
    <string name="settings_camera_mic">Please go to system settings to allow camera and microphone access.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reject">Reject</string>
    <string name="settings">Settings</string>
    <string name="beauty_reset">Reset</string>
    <string name="beauty_none">None</string>
    <string name="beauty_group_basic">Basic</string>
    <string name="beauty_basic_smoothing">Smoothing</string>
    <string name="beauty_basic_skin_tone">Skin Tone</string>
    <string name="beauty_basic_blusher">Blusher</string>
    <string name="beauty_basic_sharpening">Sharpening</string>
    <string name="beauty_basic_wrinkles">Wrinkles</string>
    <string name="beauty_basic_dark_circles">Dark Circles</string>
    <string name="beauty_group_advanced">Advanced</string>
    <string name="beauty_advanced_face_slimming">Face Slimming</string>
    <string name="beauty_advanced_eye_enlarging">EyeEnlarging</string>
    <string name="beauty_advanced_eye_brightening">Eye Brightening</string>
    <string name="beauty_advanced_chin_lengthening">Chin Lengthening</string>
    <string name="beauty_advanced_mouth_reshape">Mouth Reshape</string>
    <string name="beauty_advanced_teeth_whitening">Teeth Whitening</string>
    <string name="beauty_advanced_nose_slimming">NoseSlimming</string>
    <string name="beauty_advanced_nose_lengthening">Nose Lengthening</string>
    <string name="beauty_advanced_face_shortening">Face Shortening</string>
    <string name="beauty_advanced_mandible_slimming">Mandible Slimming</string>
    <string name="beauty_advanced_cheekbone_slimming">Cheekbone Slimming</string>
    <string name="beauty_advanced_forehead_slimming">Forehead Slimming</string>
    <string name="beauty_group_makeup_lipstick">Lipstick</string>
    <string name="beauty_makeup_lipstick_cameo_pink">Cameo Pink</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
</resources>